# pyHFO

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  setup.py  setup_macos.py  tox.ini
docs/: model-paramer-loading.md
pyhfo2app/: app.py  classifer.py  hfo_app.py  spindle_app.py
pyhfo2app/controllers/: annotation_controller.py  main_waveform_plot_controller.py  main_window_controller.py  mini_plot_controller.py
pyhfo2app/models/: annotation_model.py  main_waveform_plot_model.py  main_window_model.py  mini_plot_model.py
pyhfo2app/ui/: annotation.py  annotation_plot.py  annotation_ui.py  bipolar_channel_selection.py  channels_selection.py  edf_info.py  main_window.py  plot_waveform.py  quick_detection.py
pyhfo2app/utils/: utils_inference.py  utils_plotting.py
pyhfo2app/views/: main_window_view.py
scripts/: pyhfo_quick_detect.py
tests/: test_import.py
